fix(swagger): change getAll user response object to array
